Add mail parsing dependency